[package]
name = "stele"
version = "0.2.1"
description = "An atomic Vec-like structure with no copying on allocation"
license = "MIT OR Apache-2.0"
keywords = ["data-structure", "concurrent"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []


[dependencies]

[target.'cfg(loom)'.dependencies]
loom = "0.5"

[profile.release]
lto = true
codegen-units = 1
