[package]
name = "stele"
repository = "https://github.com/AlyssaRoseDev/stele"
version = "0.3.4"
description = "An atomic Vec-like structure with no copying on allocation"
license = "MIT OR Apache-2.0"
keywords = ["data-structure", "concurrent"]
edition = "2018"
exclude = ["/.circleci", "codecov.yml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
allocator_api = []
std = []

[target.'cfg(loom)'.dependencies]
loom = "0.5"

[profile.release]
lto = true
codegen-units = 1
